# erCv

./: .gitignore  CMakeLists.txt  Doxyfile  Doxyfile.in  Licence_CeCILL_V2-en.html  Licence_CeCILL_V2-fr.html  README.md  README_cmake  __init__.py  ercv.files  ercv.includes
GUI/: erDirControl.py  erTransfertSetter.py  erWeldPoolSetter.py  mplwidget.py  qrc_resources.py  resources.qrc
GUI/erParamsGUI/: __init__.py  erAdaptiveThresholdWidget.py  erAdaptiveThresholdWidget.py~  erAlphaShapeWidget.py  erAlphaShapeWidget.py~  erCannyWidget.py  erDilatWidget.py  erParamsWidget.py  erRectWidget.py  erRectWidget.py~  erSmootParam.py~  erSmootWidget.py  erTemplateWidget.py  erThresholdWidget.py  erWhiteBlobWidget.py
articles/MIG/: paper-drop.tex  paper-drop_v1.tex  paper_bain_drop.bib
articles/MIG/source/: viewImages.py
articles/TIG/: paper_bain.tex  paper_bain3.tex  paper_bain_drop.bib
config/: CMakeLists.txt  erCv-config-version.cmake.in  erCv-config.cmake.in
doc/html/: _c_make_c_compiler_id_8c.html  _c_make_c_x_x_compiler_id_8cpp.html  _py__er_base_8cpp.html  _py__er_calibration_8cpp.html  _py__er_cv_8cpp.html  annotated.html  class_criteria_functor-members.html  class_criteria_functor.html  class_image-members.html  class_image.html  class_is_between-members.html  class_is_between.html  class_is_equal_to-members.html  class_is_equal_to.html  class_is_greater_equal-members.html  class_is_greater_equal.html  class_is_greater_than-members.html  class_is_greater_than.html  class_is_less_equal-members.html  class_is_less_equal.html  class_is_less_than-members.html  class_is_less_than.html  classer_calibration-members.html  classer_calibration.html  classer_image-members.html  classer_image.html  classes.html  ecriture__x__y_8hpp-source.html  ecriture__x__y_8hpp.html  er_calibration_8cpp.html  er_calibration_8hpp-source.html  er_calibration_8hpp.html  er_cgal_alpha_shape2_8hpp-source.html  er_cgal_alpha_shape2_8hpp.html  er_cgal_base_8hpp-source.html  er_cgal_base_8hpp.html  er_cgal_polygon2_8hpp-source.html  er_cgal_polygon2_8hpp.html  er_cv_8hpp-source.html  er_cv_8hpp.html  (+62 more)
docs/: CMakeLists.txt  doxygen.cfg.in
erCv/: erCv.pro  erCv_global.h  ercv.cpp  ercv.h
examples/: CMakeLists.txt  macro_drop.cpp
examples/creatis/: creatis.py
examples/laser_weld_pool/: CMakeCache.txt  CMakeLists.txt  fusion_bain.cpp  laser_bain.cpp  laser_bain_python.cpp  visu.py
examples/macro_drop/: CMakeLists.txt  compare_macro_drop.py  hump_python.cpp  hump_python.py  infolog.txt  macro_drop.cpp  macro_drop.py  macro_drop_modified.py  macro_drop_python.cpp  macro_drop_python.py  macro_drop_with_cgal.cpp  params  params-comments  params_17022010  visu_hump.py  visu_macro_drop.py
examples/macro_drop/results/: macroDrop_mcr_curvCV_1.txt  macroDrop_modified_mcr_curvCV_1.txt
examples/melt_pool_TIG/: CMakeLists.txt  fusion_bain.cpp  fusion_bain_move_python.cpp  fusion_bain_move_python.py  fusion_bain_python.cpp  fusion_bain_python.py  melt_pool_tig.cpp  visu.py  white_blob_detection.cpp
examples/metal_transfert/: CMakeLists.txt  drop.cpp  drop_python.cpp  drop_python.py  params  visu.py
examples/metal_transfert/results/: peo_00.seg  peo_01.seg  peo_02.seg  peo_03.seg  peo_04.seg  peo_05.seg  peo_06.seg  peo_07.seg  peo_08.seg  peo_09.seg  peo_10.seg  peo_11.seg  peo_12.seg  peo_13.seg  peo_14.seg  peo_15.seg  peo_16.seg  peo_17.seg  peoseg  visu.py
include/: CMakeLists.txt
include/erCv/: documentation.hpp  erCalibration.hpp  erCalibration.stock  erCgalAlphaShape2.hpp  erCgalBase.hpp  erCgalPolygon2.hpp  erCv.hpp  erCvAnalysis.hpp  erCvBase.hpp  erCvCgal.hpp  erCvExtract.hpp  erCvFilters.hpp  erCvFiltersParams.hpp  erCvFiltersUser.hpp  erCvSegmentation.hpp  erCvSegmentationParams.hpp  erCvToCgal.hpp  erCvTools.hpp  erCvUser_interac.hpp  erFileUtilities.hpp  erPredicates.hpp
include/erCv/CGAL/: erCgalBase.hpp
include/erCv/Gui/: customKeys.hpp  (+3 more)
src/: CMakeLists.txt  erCalibration.cpp  erCvAnalysis.cpp  erCvBase.cpp  erCvFilters.cpp  erCvFiltersParams.cpp  erCvFiltersUser.cpp  erCvInfofile.cpp  erCvManipFileName.cpp  erCvSegmentation.cpp  erCvSegmentationParams.cpp  erCvTools.cpp  erCvUser_interac.cpp  erFileUtilities.cpp  erManipFileName.cpp  erPredicates.cpp  geometricalParams.cpp  params.cpp
src/Gui/: erCvFiltersUser.cpp  erCvSegmentationUser.cpp  erCvUserInteraction.cpp
src/analysis/: erMacroDropAnalysis.cpp~  erMetalTransfertAnalysis.cpp  erMetalTransfertAnalysis.cpp~  erMultiMetalTransfertAnalysis.cpp  erMultiMetalTransfertAnalysis.cpp~  erWeldPoolAnalysis.cpp  erWeldPoolSolidificationAnalysis.cpp  erWireAnalysis.cpp  erWireAnalysis.cpp~
src/bindings/python/: CMakeLists.txt  Py_erCalibration.cpp  Py_erChainPoints.cpp  Py_erCvAnalysis.cpp  Py_erCvBase.cpp  Py_erCvFiltersParams.cpp  Py_erCvSegmentation.cpp  Py_erCvSegmentationParams.cpp  Py_erCvTools.cpp  Py_erGeometricalParams.cpp  Py_erGeometricalProperties.cpp  Py_erSkeleton.cpp  Pyercv.cpp  erConvertNumPyArrayToImage.cpp
src/bindings/python/analysis/: Py_erCreatisAnalysis.cpp  Py_erLaserPrototypageAnalysis.cpp  Py_erMacroDropAnalysis.cpp  Py_erMetalTransfertAnalysis.cpp  Py_erMultiTransfertAnalysis.cpp  Py_erSolidificationAnalysis.cpp  Py_erWeldPoolAnalysis.cpp  Py_erWeldPoolSolidificationAnalysis.cpp  Py_erWireAnalysis.cpp
src/geometry/: erConstrainedTriangulation.cpp  erConstrainedTriangulation.cpp~
src/graph/: erConnectedSegments.cpp  erConnectedSegments.cpp~  erGraph.cpp  erGraph.cpp~  erGraphTools.cpp  erGraphTools.cpp~
src/stockage/: Py_erBase.cpp  Py_erCalibration.cpp  Py_erCv.cpp
tests/: CMakeLists.txt  test_calibration.cpp  test_cgal.cpp  test_cv.cpp  test_cv_filters.cpp  test_edward.cpp  visu_alpha.py
tests/base/: CMakeLists.txt  test_cv.cpp
tests/calibration/: CMakeLists.txt  test_calibration.cpp
tests/cgal/: CMakeLists.txt  test_alpha_shape.cpp  test_ercv2cgal.cpp
tests/filters/: CMakeLists.txt  test_cv_filters.cpp
tests/segmentation/: CMakeLists.txt  blob_detect.cpp
tools/python/: CMakeLists.txt  erCv.py  erCvGeometry.py  erCvTools.py
tools/visualization/: alpha_shape_2.py
(+49 files in other folders)
