# Created by the script cgal_create_cmake_script
# This is the CMake script for compiling a CGAL application.

CMAKE_MINIMUM_REQUIRED(VERSION 2.6.1)

INCLUDE_DIRECTORIES(../${ERCV_INCLUDE_DIR} ${OPENCV_INCLUDE_DIR} ${CGAL_INCLUDE_DIR})
LINK_DIRECTORIES(${OPENCV_LIBRARY_DIR} ../${ERCV_LIBRARY_DIR})

MESSAGE(STATUS "OPENCV INCLUDE DIR:" ${OPENCV_INCLUDE_DIR})
MESSAGE(STATUS "CGAL INCLUDE DIR:" ${CGAL_INCLUDE_DIR})
MESSAGE(STATUS "CGAL library DIR:" ${CGAL_LIBRARY_DIR})
MESSAGE(STATUS "Boost Python DIR:" ${Boost_PYTHON_INCLUDE_DIR})

ADD_EXECUTABLE(test_cv test_cv.cpp)
TARGET_LINK_LIBRARIES(test_cv erCv ${OPENCV_LIBS})

ADD_EXECUTABLE(test_cgal test_cgal.cpp)
TARGET_LINK_LIBRARIES(test_cgal erCv ${CGAL_LIBS})

ADD_EXECUTABLE(test_cv_filters test_cv_filters.cpp)
TARGET_LINK_LIBRARIES(test_cv_filters erCv ${OPENCV_LIBS})
