CMAKE_MINIMUM_REQUIRED(VERSION 2.6.0)

INCLUDE_DIRECTORIES(${ERCV_INCLUDE_DIR} ${OPENCV_INCLUDE_DIR} ${CGAL_INCLUDE_DIR})
LINK_DIRECTORIES(${OPENCV_LIBRARY_DIR})

ADD_EXECUTABLE(laser_bain laser_bain.cpp)
TARGET_LINK_LIBRARIES(laser_bain erCv ${OPENCV_LIBS})


ADD_EXECUTABLE(laser_bain_python laser_bain_python.cpp)
TARGET_LINK_LIBRARIES(laser_bain_python erCv ${OPENCV_LIBS})

