CMAKE_MINIMUM_REQUIRED(VERSION 2.6.0)

INCLUDE_DIRECTORIES(${ERCV_INCLUDE_DIR} ${OPENCV_INCLUDE_DIR} ${CGAL_INCLUDE_DIR})
LINK_DIRECTORIES(${OPENCV_LIBRARY_DIR})

MESSAGE(STATUS "OPENCV INCLUDE DIR:" ${OPENCV_INCLUDE_DIR})
MESSAGE(STATUS "CGAL INCLUDE DIR:" ${CGAL_INCLUDE_DIR})
MESSAGE(STATUS "CGAL library DIR:" ${CGAL_LIBRARY_DIR})
MESSAGE(STATUS "erCv include dir:" ${ERCV_INCLUDE_dir})
MESSAGE(STATUS "Boost Python DIR:" ${Boost_PYTHON_INCLUDE_DIR})
ADD_EXECUTABLE(macro_drop macro_drop.cpp)
TARGET_LINK_LIBRARIES(macro_drop erCv ${OPENCV_LIBS})
ADD_EXECUTABLE(macro_drop_with_cgal macro_drop_with_cgal.cpp)
TARGET_LINK_LIBRARIES(macro_drop_with_cgal erCv ${OPENCV_LIBS} ${CGAL_LIBRARY_DIR} )
