CMAKE_MINIMUM_REQUIRED(VERSION 2.6.0)

INCLUDE_DIRECTORIES(${ERCV_INCLUDE_DIR} ${OPENCV_INCLUDE_DIR} ${CGAL_INCLUDE_DIR})
LINK_DIRECTORIES(${OPENCV_LIBRARY_DIR})

ADD_EXECUTABLE(hump_python hump_python.cpp)
TARGET_LINK_LIBRARIES(hump_python erCv ${OPENCV_LIBS})

ADD_EXECUTABLE(hump_python_edward hump_python_edward.cpp)
TARGET_LINK_LIBRARIES(hump_python_edward erCv ${OPENCV_LIBS})

ADD_EXECUTABLE(macro_drop macro_drop.cpp)
TARGET_LINK_LIBRARIES(macro_drop erCv ${OPENCV_LIBS})

ADD_EXECUTABLE(macro_drop_python macro_drop_python.cpp)
TARGET_LINK_LIBRARIES(macro_drop_python erCv ${OPENCV_LIBS})

CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/imageExemple_1.bmp
			${CMAKE_CURRENT_BINARY_DIR}/imageExemple_1.bmp
			COPYONLY)

CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/macro_drop_python.py
			${CMAKE_CURRENT_BINARY_DIR}/macro_drop_python.py
			COPYONLY)
CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/hump_python.py
			${CMAKE_CURRENT_BINARY_DIR}/hump_python.py
			COPYONLY)

CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/hump_1.bmp
			${CMAKE_CURRENT_BINARY_DIR}/hump_1.bmp
			COPYONLY)
CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/hump_2.bmp
			${CMAKE_CURRENT_BINARY_DIR}/hump_2.bmp
			COPYONLY)

CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/hump_3.bmp
			${CMAKE_CURRENT_BINARY_DIR}/hump_3.bmp
			COPYONLY)
