CMAKE_MINIMUM_REQUIRED(VERSION 2.6.0)

INCLUDE_DIRECTORIES(${ERCV_INCLUDE_DIR} ${OPENCV_INCLUDE_DIR} ${CGAL_INCLUDE_DIR})
LINK_DIRECTORIES(${OPENCV_LIBRARY_DIR})

ADD_EXECUTABLE(drop drop.cpp)
TARGET_LINK_LIBRARIES(drop erCv ${OPENCV_LIBS} ${CGAL_LIBRARY_DIR} ${Boost_GRAPH_LIBRARY_DIR})

ADD_EXECUTABLE(drop_python drop_python.cpp)
TARGET_LINK_LIBRARIES(drop_python erCv ${OPENCV_LIBS} ${CGAL_LIBRARY_DIR} ${Boost_GRAPH_LIBRARY_DIR})
FILE(COPY imageExemple_1.bmp DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
FILE(COPY imageExemple_2.bmp DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
FILE(COPY imageExemple_3.bmp DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
FILE(COPY imageExemple_4.bmp DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
FILE(COPY imageExemple_5.bmp DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
FILE(COPY imageExemple_6.bmp DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
FILE(COPY drop_python.py     DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
